--- a/style-common.css
+++ b/style-common.css
@@ -7,6 +7,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300&display=swap');
 
 
+/***************  Color templates  *********/
+:root {
+--c_pg_bg  : #0E435F;
+--c_mn_bg  : #031F32 ;
+--c_mn_nav : #0E435F  /* rgba(3, 31, 50, 0.5) ; */
+--c_mn_ftr : #031F32 ;
+--c_hdr1  : #96C5E0;  /*  96C5E0   96DDE0 */
+--c_txt : floralwhite ;
+--c_hyp: #96C5E0;
+}
 
 * {
   box-sizing: border-box;
@@ -15,41 +25,38 @@
 }
 
 body {
-    font-family:  'Source Sans Pro', sans-serif, 'Montserrat',    'Lexend', 'Merriweather';
+    font-family:  'Palatino', 'Source Sans Pro', 'Lexend', 'Merriweather', 'Montserrat',  sans-serif ;
     font-size: 14px;
     line-height: 1.2;
-    background-color: #f0f0f0; /* Grey background color */
+    background-color: var(--c_pg_bg); /* Grey background color */
     margin: 0;
 }
 
 
 main {
   margin: 80px auto;
-  margin-top: 46px;
+  margin-top: 0px;
+  margin-bottom: 0px;
   max-width: 1000px;
-  background-color: #fff;
+  background-color: var(--c_mn_bg); /* 0D364C */
   padding: 20px; /* Add some padding for spacing */
 /*  border-radius: 8px;  */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
   margin-bottom: auto;
+  
 }
 
 
 h1 {
 /*  font-family:  'Source Sans Pro', sans-serif, 'Montserrat', 'Lexend', 'Merriweather';*/
-  font-family: 'Hammersmith One', 'Source Sans Pro', sans-serif, 'Montserrat', 'Merriweather';
+/*  font-family: 'Hammersmith One', 'Source Sans Pro', sans-serif, 'Montserrat', 'Merriweather';*/
   font-weight: 400;
   font-size: 1.5rem;
   font-style: normal;
   margin-top: 30px;
   margin-bottom: 10px;
-  color: midnightblue;
-  background-image: linear-gradient(to left, #553c9a, #b393d3);
-  background-clip: text;
-  -webkit-background-clip: text;
-    
+  color: var(--c_hdr1);
 }
-
 
 
 h2 {
@@ -58,6 +65,7 @@ h2 {
   font-weight: 100;
   margin-top: 20px;
   margin-bottom: 10px;
+  color: var(--c_hdr2);
 }
 
 h3 {
@@ -69,10 +77,12 @@ h3 {
 
 p {
   font-size: 0.9rem;
+  color: var(--c_txt);
+  
 }
 
 a {
-    color: dodgerblue;
+    color: var(--c_hyp);
     font-weight: 300;
     text-decoration: none;
 }
@@ -92,6 +102,16 @@ ul {
 
 ul li {
   margin-top: 10px;
+  color: var(--c_txt);
+}
+
+li {
+  margin-top: 10px;
+  color: var(--c_txt);
+}
+
+ol li {
+  color: var(--c_txt);
 }
 
 
@@ -125,24 +145,25 @@ ul li {
 
 
 
-
 /***************************************************
   header and navigation bar
 ***************************************************/
 
 
 header {
+  margin: 80px auto;
+  margin-top: 46px;
+  margin-bottom: 0px;
+  max-width: 1000px;
+  padding-bottom: 0px; 
+  background-color: var(--c_mn_nav);
+    
 /*
-  background-color: #001f3f;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-*/
-  background-color: #333333;
-/*  background-image: linear-gradient(to bottom, #333333, #001f3f);*/
-  color: #fff;   
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 80%;
   z-index: 1;
+*/
 }
 
 nav ul {
@@ -160,9 +181,8 @@ nav li {
 }
 
 nav a {
-/*  color: #333;*/
-  color:whitesmoke;
-  font-size: 0.9rem;
+  color: var(--c_txt);
+  font-size: 1rem;
   font-weight: 300;
   text-decoration: none;
   border-bottom: 2px solid transparent;
@@ -187,143 +207,6 @@ nav a:hover {
 
 
 
-/***************************************************
-  About
-***************************************************/
-
-#about {
-  display: flex;
-/*  background-color: dimgrey;*/
-/*  border-radius: 8px;  Add rounded corners */
-/*  background-color: #4A4A4A;*/
-/*  color: #fff;*/
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-/*  margin: 40px 0px;*/
-  padding: 20px;
-  border-bottom: 2px solid #ccc;
-/*  border-radius: 5%;*/
-}
-
-.image-container {
-  width: 100px;
-}
-
-#about img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-  margin: 0 auto;
-/*  filter: grayscale(20%) blur(0px) brightness(110%) contrast(100%) sepia(15%);*/
-/*  filter: hue-rotate(300deg) saturate(0.9);*/
-/*  border-radius: 50%;*/
-}
-
-.description {
-  width: 80%;
-  padding: 0 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-
-
-#about .title {
-  font-size: 1.4rem;
-  font-stretch: condensed;
-  font-weight: 600;
-  margin: 0px 10px 0px 0;
-  text-transform: full-width;
-/*  white-space: nowrap;*/
-  background-image: linear-gradient(to right, #1e90ff, #00ced1);
-  background-image: conic-gradient(#553c9a, #ee4b2b, #00c2cb, #553c9a);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-#about .subtitle {
-  font-size: 0.9rem;
-  margin: 0 0 0 0;
-  font-weight: 300;
-  color: #777;
-}
-
-
-
-
-/***************  Profile ********************/
-#profile {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-#profile li {
-  margin-right: 10px;
-  font-size: 0.8rem;
-  font-weight: 300;
-}
-
-#profile a {
-  color: deepskyblue;
-  text-decoration: none;
-  border-bottom: 2px solid transparent;
-}
-
-#profile a:hover {
-  border-bottom-color: deepskyblue;
-}
-
-#cv {
-  margin-top: 5px;
-  font-weight: 300;
-  color: #777;
-}
-
-#cv a{
-    color: deepskyblue;
-}
-
-
-/***************  Research Interests ********************/
-.interest {
-}
-
-.interest ul{
-  padding-left: 15px;
-  list-style-position: outside;
-  text-align: left;
-}
-
-.interest ul li{
-  margin: 10px 10px;
-  line-height: 1.2;
-}
-
-
-
-/* *****************   Responsive  ***************  */
-
-/* Media query for smaller screens */
-@media (max-width: 768px) {
-  #about { flex-direction: column; align-items: center;}
-  .image-container { width: 40%; margin-bottom: 20px;}
-  .description {width: 90%; padding: 0;}
-  #about h1 {font-size: 1.2rem; text-align: center}
-  
-#about .title {text-align: center; }
-  #about .subtitle { font-size: 0.8rem; text-align: center}
-  #profile li { margin-right: 10px; font-size: 0.8rem; text-align: center; align-items: center;}
-  #cv {text-align: center; margin-top: 10px;}
-  .interest{ width: 100%; padding-left: 0px; padding-top: 15px; text-align: left; display: none;}  
-  .interest ul { margin: 0; padding: 0 0 0 20px; text-align: left; display: none;}
-  .interest ul li {font-size: 0.8rem; display: none;}
-  .interest h2 { font-size: 1.0rem; display: none;}
-  
-}
 
 
 
@@ -334,33 +217,7 @@ nav a:hover {
 /***************************************************
   Footer
 ***************************************************/
-/*
-footer{
-text-align: center;
-border-top: 1px solid #ccc;
-padding-top: 10px;
-padding-bottom: 10px;
-background-color: #333333;
-background-image: linear-gradient(to bottom, #333333, #001f3f);
-color: #fff;
-}
 
-@keyframes typing{
-    from {width: 0}
-    to {width: 100%}
-}
-
-
-.email{
-    display: inline-block;
-    overflow: hidden;
-    width: 0;
-    border-right: .15em solid orange; 
-    margin: 0 auto; 
-    letter-spacing: .15em;
-    animation: typing 3s steps(20, end) forwards;
-}
-*/
 
 /* Footer Styles */
 footer {
