--- a/style-index.css
+++ b/style-index.css
@@ -8,6 +8,138 @@
 
 
 /***************************************************
+  About
+***************************************************/
+
+#about {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+/*  margin: 40px 0px;*/
+  padding: 20px;
+  border-bottom: 2px solid #ccc;
+/*  border-radius: 5%;*/
+}
+
+
+.image-container {
+  width: auto;
+  max-width: 100px;
+}
+
+#about img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+.description {
+  width: 80%;
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+
+#about .title {
+  font-size: 1.4rem;
+  font-stretch: condensed;
+  font-weight: 300;
+  margin: 0px 10px 0px 0;
+  text-transform: full-width;
+  color: var(--c_hdr1)
+  
+}
+
+#about .subtitle {
+  font-size: 0.9rem;
+  margin: 0 0 0 0;
+  font-weight: 300;
+  color: var(--c_txt);
+}
+
+
+
+
+/***************  Profile ********************/
+#profile {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#profile li {
+  margin-right: 10px;
+  font-size: 0.8rem;
+  font-weight: 300;
+}
+
+#profile a {
+  color: deepskyblue;
+  text-decoration: none;
+  border-bottom: 2px solid transparent;
+}
+
+#profile a:hover {
+  border-bottom-color: deepskyblue;
+}
+
+#cv {
+  margin-top: 5px;
+  font-weight: 300;
+  color: var(--c_txt);
+}
+
+#cv a{
+    color: deepskyblue;
+}
+
+
+/***************  Research Interests ********************/
+.interest {
+}
+
+.interest ul{
+  padding-left: 15px;
+  list-style-position: outside;
+  text-align: left;
+}
+
+.interest ul li{
+  margin: 10px 10px;
+  line-height: 1.2;
+}
+
+
+
+/* *****************   Responsive  ***************  */
+
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+  #about { flex-direction: column; align-items: center;}
+  .image-container { width: 40%; margin-bottom: 20px;}
+  .description {width: 90%; padding: 0;}
+  #about h1 {font-size: 1.2rem; text-align: center}
+  
+#about .title {text-align: center; }
+  #about .subtitle { font-size: 0.8rem; text-align: center}
+  #profile li { margin-right: 10px; font-size: 0.8rem; text-align: center; align-items: center;}
+  #cv {text-align: center; margin-top: 10px;}
+  .interest{ width: 100%; padding-left: 0px; padding-top: 15px; text-align: left; display: none;}  
+  .interest ul { margin: 0; padding: 0 0 0 20px; text-align: left; display: none;}
+  .interest ul li {font-size: 0.8rem; display: none;}
+  .interest h2 { font-size: 1.0rem; display: none;}
+  
+}
+
+
+
+/***************************************************
   Bio
 ***************************************************/
 
@@ -15,6 +147,7 @@
   margin-top: 20px;
   margin-bottom: 10px;
 /*  font-size: 1.5rem;*/
+
 }
 
 #bio h3 {
@@ -28,10 +161,11 @@
   margin: 0;
 /*  font-size: 0.8rem;*/
   line-height: 1.5;
+/*  color: var(--c_txt);*/
 }
 
 #bio a {
-  color: #1E90FF;
+/*  color: var(--c_txt);*/
 }
 
 
@@ -53,46 +187,6 @@
 }
 
 
-
-
-
-/***************************************************
-  Selected Publications
-***************************************************/
-/*
-.sel_publications ol {
-  padding-left: 20px;
-  list-style-position: outside;
-  text-align: left;
-  order: reversed;
-}
-
-
-.sel_publications li {
-  width: calc(100% - 20px);
-  margin-left: 10px;
-  margin-bottom: 15px;
-  padding: 10px;
-  border-radius: 8px;
-  overflow: hidden;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-}
-
-
-
-.sel_publications a {
-    color: #3e3c3c;
-    font-weight: 600;
-    text-decoration: none;
-}
-
-.sel_publications a:hover {
-    color: deepskyblue;
-    border-bottom: 2px solid;
-    border-bottom-color: deepskyblue; 
-}
-*/
-
 .publications ol {
   padding-left: 15px;
   list-style-position: outside;
@@ -103,17 +197,18 @@
 .publications li {
   margin: 10px 20px;
   line-height: 1.4;
+/*  color: var(--c_txt);*/
 }
 
 
 .publications a {
-    color: #3e3c3c;
-    font-weight: 600;
+/*    color: var(--c_hyp);*/
+/*    font-weight: 300;*/
     text-decoration: none;
 }
 
 .publications a:hover {
-    color: #1E90FF; /*#1E90FF;*/
+/*    color: #1E90FF; #1E90FF;*/
 /*    font-weight: 400;*/
     border-bottom: 2px solid;
     border-bottom-color: #1E90FF; /* #1E90FF;   */
@@ -127,17 +222,15 @@
 ***************************************************/
 
 .news h1{
-    color:aliceblue;
+/*    color:aliceblue;*/
 }
 .news {
   margin: 0px auto;
   margin-top: 0px;
   max-width: 1000px;
-  background-color: #03497A;
-  color:aliceblue;
-/*  background-image: linear-gradient(darkcyan, gray 95%);*/
-  padding: 20px; /* Add some padding for spacing */
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+/*  color: -var(--c_mn_bg);*/
+  padding: 0px; /* Add some padding for spacing */
+/*  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);  Add a subtle shadow */
 }
 
 .news_item {
@@ -146,7 +239,7 @@
   margin-left: 30px;
   margin-bottom: 15px;
 */
-  padding: 10px;
+  padding: 0px;
 /*  border-radius: 8px;*/
   overflow: hidden;
 /*  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);*/
@@ -154,10 +247,10 @@
 }
 
 .news_date {
-  margin-top: 10px;
+  margin-top: 5px;
   padding-right: 10px;
-  color: #999;
-  font-weight: 600;
+  color: var(--c_hdr1);
+  font-weight: 400;
 }
 
 .news_title {
