--- a/style-services.css
+++ b/style-services.css
@@ -26,7 +26,7 @@
 
 .services a {
 /*    color: #3e3c3c;*/
-    font-weight: 600;
+    font-weight: 300;
     text-decoration: none;
 }
 
@@ -34,7 +34,7 @@
 /*    color: deepskyblue; */
 /*    font-weight: 400;*/
     border-bottom: 2px solid;
-    border-bottom-color: deepskyblue; /* #1E90FF;   */
+/*    border-bottom-color: deepskyblue;  #1E90FF;   */
 }
 
 
