--- a/style-index.css
+++ b/style-index.css
@@ -254,8 +254,8 @@
 }
 
 .news_title {
-    font-family: monospace;
-    font-size: 0.85rem;
+/*    font-family: monospace;*/
+/*    font-size: 0.85rem;*/
 /*  color: #1E90FF;*/
 /*  font-weight: 600;*/
 /*  margin: 0;*/
