--- a/style-common.css
+++ b/style-common.css
@@ -211,6 +211,34 @@ nav a:hover {
 }
 
 
+nav ul li ul {
+    display: none;
+    position: absolute;
+    padding-left: 0; /* Remove padding */
+    margin-left: 0; /* Remove margin */
+}
+/* For drop down menu  */
+
+
+nav ul li ul li{
+    padding-bottom: 10px;
+    margin: 0px;
+    
+}
+
+nav ul li:hover ul {
+    display: block;
+    animation: fadeIn 0.3s ease;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
 
 /* ++++++++++++++ For mobile friendly +++++++++++++++++++++++++ */
