--- a/style-blog.css
+++ b/style-blog.css
@@ -3,6 +3,7 @@
  Photo Gallery 
 ***************************************************/
 
+
 .photo-gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -37,6 +38,10 @@
 }
 
 
+@media (max-width: 768px) {
+    .caption {text-align: center;}
+    .photo {align-items: center;}
+}
 
 /***************************************************
   Blog 
