--- a/style-common.css
+++ b/style-common.css
@@ -8,6 +8,7 @@
 
 
 /***************  Color templates  *********/
+/*
 :root {
 --c_pg_bg  : #0E435F;
 --c_mn_bg  : #031F32 ;
@@ -17,18 +18,17 @@
 --c_txt : floralwhite ;
 --c_hyp: #96C5E0;
 }
+*/
 
-/*
 :root {
 --c_pg_bg  : #EBEFF3;
 --c_mn_bg  : #FDFDFF ;
---c_mn_nav : #0E435F;  
+--c_mn_nav : #EBEFF3;  
 --c_mn_ftr : #FDFDFF ;
---c_hdr1   : #064A8E;  
+--c_hdr1   : #0E0F10; /* #064A8E;   */
 --c_txt    : #0E0F10 ;
---c_hyp    : #064A8E;
+--c_hyp    : #1772d0; /* #064A8E;  */
 }
-*/
 
 
 
@@ -39,7 +39,7 @@
 }
 
 body {
-    font-family:  'Palatino', 'Source Sans Pro', 'Lexend', 'Merriweather', 'Montserrat',  sans-serif ;
+    font-family:  'Lato', 'Palatino', 'Source Sans Pro', 'Lexend', 'Merriweather', 'Montserrat',  sans-serif ;
     font-size: 14px;
     line-height: 1.2;
     background-color: var(--c_pg_bg); /* Grey background color */
@@ -118,15 +118,18 @@ ul li {
   margin-top: 10px;
   color: var(--c_txt);
   list-style-position: outside;
+  font-size: 0.9rem;
 }
 
 li {
   margin-top: 10px;
+  font-size: 0.9rem;
   color: var(--c_txt);
 }
 
 ol li {
   color: var(--c_txt);
+  font-size: 0.9rem;
 }
 
 
@@ -151,7 +154,7 @@ ol li {
 /* Mobile View  */
 @media screen and (max-width: 480px) {
     main {margin: 20px auto; max-width: 95vw;}
-    h1 {font-size: 1.2rem;}
+    h1 {font-size: 1.3rem;}
     h2 {font-size: 1.1rem;}
     h3 {font-size: 1.0rem;}
     p {font-size: 0.8rem;}
@@ -296,7 +299,7 @@ footer {
 }
 
 .social-icons a {
-    color: #fff;
+    color: var(--c_txt);
     text-decoration: none;
     font-size: 20px;
 }
@@ -314,7 +317,7 @@ footer {
     width: 0;
     margin: 0 auto;
     letter-spacing: .15em;
-    color:deepskyblue;
+    color: var(--c_hyp);;
 }
 
 
