--- a/style-pub.css
+++ b/style-pub.css
@@ -24,7 +24,7 @@
 
 .category ul {
   display: flex;
-  justify-content: right;
+  justify-content: left;
   list-style-type: none;
   margin: 0;
   padding-top: 10px;
@@ -79,6 +79,7 @@ border-bottom-color: #1E90FF;
 .publications li {
   margin: 10px 20px;
   line-height: 1.4;
+/*  font-size: 1.0rem;*/
 }
 
 
