--- a/style-common.css
+++ b/style-common.css
@@ -132,6 +132,10 @@ ol li {
   font-size: 0.9rem;
 }
 
+.video{
+    color: red;
+}
+
 
 /* ++++++++++++++++++++++++++  Mediq querries  +++++++++++++++++++++ */
 
