--- a/style-common.css
+++ b/style-common.css
@@ -27,7 +27,7 @@
 --c_mn_ftr : #FDFDFF ;
 --c_hdr1   : #0E0F10; /* #064A8E;   */
 --c_txt    : #0E0F10 ;
---c_hyp    : #1772d0; /* #064A8E;  */
+--c_hyp    : #1772d0 ; /*#1772d0; /* #064A8E;  */
 }
 
 
@@ -133,9 +133,10 @@ ol li {
 }
 
 .video{
-    color: red;
-/*    margin: auto;*/
+    color: mediumvioletred;
 }
+
+
 
 
 /* ++++++++++++++++++++++++++  Mediq querries  +++++++++++++++++++++ */
