--- a/style-common.css
+++ b/style-common.css
@@ -46,7 +46,7 @@
 }
 
 body {
-    font-family:  'Lato', 'Space Grotesk',  sans-serif, 'Varela Round',   'Archivo',  'Merriweather', 'Chivo', 'Montserrat', 'Lexend', 'Source Sans Pro', 'Palatino' ;
+    font-family:     'Lato',  sans-serif,  'Archivo', 'Varela Round',  'Space Grotesk', 'Merriweather', 'Chivo', 'Montserrat', 'Lexend', 'Source Sans Pro', 'Palatino' ;
     font-size: 14px;
     line-height: 1.2;
     background-color: var(--c_pg_bg); /* Grey background color */
@@ -181,6 +181,7 @@ ol li {
 ***************************************************/
 
 
+
 header {
   margin: 80px auto;
   margin-top: 46px;
@@ -188,14 +189,25 @@ header {
   max-width: 1000px;
   padding-bottom: 0px; 
   background-color: var(--c_mn_nav);
-    
+}
+
 /*
+header {
+  position: fixed;
   position: fixed;
   top: 0;
-  width: 80%;
-  z-index: 1;
-*/
+  left: 0;
+  right: 0;
+  max-width: 1000px;
+  margin: 0 auto;
+  z-index: 1000;  
+  background-color: var(--c_mn_bg);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
+  align-items: center;
+  margin-bottom: 50px;
 }
+*/
+
 
 nav ul {
   display: flex;
@@ -204,6 +216,9 @@ nav ul {
   margin: 0;
   padding-top: 20px;
   padding-bottom: 10px;
+/*  margin-bottom: 50px;*/
+  
+    
 }
 
 nav li {
