--- a/style-research.css
+++ b/style-research.css
@@ -167,10 +167,10 @@ height: 130px;
 
 /* Media query for smaller screens */
 @media (max-width: 768px) {
-.research-item { flex-direction: column; align-items: center;}
-.research-description {flex: 1; margin-top: 10px;}
-.research-description h3 {text-align: center; align-content: center; font-size: 0.8rem;}
-.research-description p {line-height: 1.5; margin-bottom: 0; font-size: 1rem;}
+.research-item { flex-direction: column; align-items: center; font-size: 0.9rem;}
+.research-description {flex: 1; margin-top: 10px; font-size: 0.9rem;}
+.research-description h3 {text-align: center; align-content: center; font-size: 0.9rem;}
+.research-description p {line-height: 1.5; margin-bottom: 0; font-size: 0.9rem;}
 .research-image {flex-direction: column; justify-content: flex-start; align-items: center; margin-top: 30px; margin-bottom: 20px; max-width: 80%;}
-figure {display: flex; flex-direction: column; align-items: center; text-align: center; margin-bottom:20px}
+.figure {display: flex; flex-direction: column; align-items: center; text-align: center; margin-bottom:20px}
 }
