--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat',  sans-serif; /* Montserrat  Roboto  Poppins  Raleway */
     margin: 0;
     padding: 0;
     background-color: #f5f5f5; /* Soft background color */
@@ -61,7 +61,12 @@ main {
     opacity: 0.5; /* Light opacity */
 }
 
-
+.news-container h2,
+.news-container p,
+.news-container a { /* Target all text elements */
+    position: relative; /* Set position to relative */
+    z-index: 1; /* Higher z-index to bring text in front */
+}
 
 
 
@@ -73,7 +78,7 @@ h1 {
 h2 {
     color: #2c3e50; /* Dark text for headings */
     margin-bottom: 0.5em;
-    text-align: center;
+    text-align: left;
 }
 
 h3 {
