--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font-family: 'Montserrat',  sans-serif; /* Montserrat  Roboto  Poppins  Raleway */
+    font-family: 'Source Sans Pro', sans-serif; /* Source Sans Pro  Montserrat  Roboto  Poppins  Raleway */
     margin: 0;
     padding: 0;
     background-color: #f5f5f5; /* Soft background color */
@@ -33,7 +33,7 @@ main {
     border-radius: 8px; /* Rounded corners */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow */
     margin: 0.5em 0em 0em 0em; /* Margin above and below each container */
-    padding: 2em 4em 1em 4em; /* Padding inside each container */
+    padding: 2em 5em 1em 5em; /* Padding inside each container */
 }
 
 
@@ -69,16 +69,21 @@ main {
 }
 
 
-
+/* <h2 class="wp-block-heading alignwide has-huge-font-size" style="font-style:normal;font-weight:200;text-transform:capitalize">Lisa Faessler</h2>*/
 
 h1 {
 /*    text-align: center;*/
+    font-weight: 600;
+    font-size: 2em;
 }
 
 h2 {
-    color: #2c3e50; /* Dark text for headings */
+    color: #2c3e50;
     margin-bottom: 0.5em;
     text-align: left;
+    font-weight: 600;
+    font-size: 1.6em;
+    
 }
 
 h3 {
@@ -152,13 +157,17 @@ nav ul {
 }
 
 nav a {
+    font-size: 1.1em;
     color: #ffffff;
     text-decoration: none;
-    font-weight: bold;
+/*    font-weight: bold;*/
 }
 
 nav a:hover {
     text-decoration: underline;
+    color: #ffffff;
+    text-decoration: underline; /* Underline on hover */
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2); /* Subtle shadow effect */
 }
 
 
@@ -185,15 +194,22 @@ nav a:hover {
 }
 
 .bio-info h1 {
-    font-size: 2em; /* Larger font size for the name */
+    font-size: 2em;  
+    font-variant-caps:titling-caps;
     margin: 0; /* Remove default margin */
+    font-family:'serif'; 
+    font-weight: 700;
+    letter-spacing: 2px;
+
 }
 
 .bio-info h2 {
     font-size: 1.5em; /* Font size for the title */
+    font-family:serif;
     color: #555; /* Slightly lighter color for the title */
     margin: 0.5em 0; /* Margin for spacing above and below */
     text-align: left;
+    letter-spacing: 1px;
 }
 
 .bio-info p {
@@ -267,7 +283,7 @@ nav a:hover {
 
 .interest-item {
     padding: 10px;
-    background-color: #f9f9f9;
+/*    background-color: #f9f9f9;*/
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
     transition: transform 0.3s ease;
@@ -278,13 +294,13 @@ nav a:hover {
   }
 
   .interest-item img {
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     border-radius: 50% /* 8px; */
   }
 
   .interest-item p {
-    width: 180px;
+    width: 160px;
     margin-top: 10px;
     font-size: 1.0em;
     color: #333;
@@ -329,6 +345,10 @@ ol.journal-list li::before {
     color: #2c3e50;  
 }
 
+ol.journal-list a{
+    font-weight: 400;
+}
+
 
 
 
@@ -355,6 +375,10 @@ ol.conf-list li::before {
     color: #2c3e50; /* Darker color for the numbering */
 }
 
+ol.conf-list a{
+    font-weight: 400;
+    font-variant-caps:titling-caps;
+}
 
 
 ol.book-list {
@@ -380,7 +404,10 @@ ol.book-list li::before {
     color: #2c3e50; /* Darker color for the numbering */
 }
 
-
+ol.book-list a{
+    font-weight: 400;
+    font-variant-caps:titling-caps;
+}
 
 
 /* ================================================================  */
@@ -434,7 +461,7 @@ Mobile Friendly
 @media (max-width: 768px) {
     
     nav {
-        position: relative; /* Ensure nav is the reference for absolute positioning */
+        position: fixed; /* Ensure nav is the reference for absolute positioning */
     }
     
     nav ul {
